[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/cursor_none.svg" type="Texture" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )
joystick_deadzone = 0.05
joystick_curve_type = 2

[node name="Label" type="Label" parent="."]
margin_left = 10.5
margin_top = 5.0
margin_right = 86.5
margin_bottom = 19.0
rect_pivot_offset = Vector2( 29.5, 14 )
text = "Prototipo"
uppercase = true

[node name="DebugLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 54.0
margin_right = 622.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 29.5, 14 )
text = "Input:"
autowrap = true

[node name="Button" type="Button" parent="."]
margin_left = 143.0
margin_top = 10.0
margin_right = 237.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 69, 0 )
text = "Third Person"

[node name="Button2" type="Button" parent="."]
margin_left = 255.0
margin_top = 10.0
margin_right = 378.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 69, 0 )
text = "Simple Flight Sim"

[node name="Cursor" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 7, 10 )

[connection signal="pressed" from="Button" to="." method="_on_Third_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Flight_pressed"]
